@@ -111,7 +111,7 @@ public:
 	Time audio_frames_to_time (OutputAudioFrame) const;
 
 	uint64_t required_disk_space () const;
-	bool should_be_enough_disk_space (double &, double &) const;
+	bool should_be_enough_disk_space (double& required, double& available, bool& can_hard_link) const;
 	
 	/* Proxies for some Playlist methods */
 
