@@ -1,5 +1,5 @@
 /*
-    Copyright (C) 2012-2014 Carl Hetherington <cth@carlh.net>
+    Copyright (C) 2012-2015 Carl Hetherington <cth@carlh.net>
 
     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -391,9 +391,16 @@ private:
 	{
 		double required;
 		double available;
+		bool can_hard_link;
 
-		if (!_film->should_be_enough_disk_space (required, available)) {
-			if (!confirm_dialog (this, wxString::Format (_("The DCP for this film will take up about %.1f Gb, and the disk that you are using only has %.1f Gb available.  Do you want to continue anyway?"), required, available))) {
+		if (!_film->should_be_enough_disk_space (required, available, can_hard_link)) {
+			wxString message;
+			if (can_hard_link) {
+				message = wxString::Format (_("The DCP for this film will take up about %.1f Gb, and the disk that you are using only has %.1f Gb available.  Do you want to continue anyway?"), required, available);
+			} else {
+				message = wxString::Format (_("The DCP and intermediate files for this film will take up about %.1f Gb, and the disk that you are using only has %.1f Gb available.  You would need half as much space if the filesystem supported hard links, but it does not.  Do you want to continue anyway?"), required, available);
+			}
+			if (!confirm_dialog (this, message)) {
 				return;
 			}
 		}
